<resources>
    <string name="app_name">EasyRead</string>
    <string name="textHint">Enter article URL</string>
    <string name="pic1">NewsPaper</string>
    <string name="pic2">Right Arrow</string>
    <string name="pic3">Article</string>
    <string name="author">Created by John Lin</string>
    <string name="submit">Submit</string>
    <string name="aboutApp">App Info</string>
    <string name="aboutMe">About Me</string>
    <string name="info">Are your Articles on the internet too long to read? Who has the time to read those articles when life is so short.
            This app allows the user to submit a url of an article and condenses the article for the user.
            By using a text processing API called Aylien, the user is given a summary of the article and various keywords from the article.
            Save your time from reading articles and use this app to make your life ten times easier</string>
    <string name="capitalOne">This app is made for CapitalOne Coding Challenge 2016.</string>
    <string name="smallinfo">Use this app to summarize articles!!!</string>
    <string name="downwardsarrow">Downwards Arrow</string>
    <string name="home">Home</string>
    <string name="meInfo">My name is John lin. I am currently a freshman majoring in Computer Science at
            Georgia Tech. I am looking for a summer internship to gain experience and learn as much as possible
            to prepare myself for my future career. I like to work in teams, and am a self learner as well. This project app
            is made for CapitalOne Coding Challenge 2016 for Software Engineering Summit over the summer.</string>
    <string name="me">Picture of me</string>
    <string name="article_summary">Article Summary</string>
    <string name="summary_hint">Where the summary is gonna be</string>
    <string name="concepts">Concepts</string>
    <string name="articleText">"It’s been almost two years since the world was captivated by Snowden’s leaks to The Guardian and The Washington Post about American surveillance programs.",
    "In response to the public outcry that followed the Snowden revelations, President Obama stipulated that congress must renew or reform the Patriot Act provision authorizing the bulk collection of Americans’ phone records by that date, or else the program will expire.",
    "Snowden then went on to explain how the government uses different programs to access those pictures, from Executive Order 12333 to Section 702 of the Foreign Intelligence Surveillance Act."</string>
    <string name="conceptText">defence - national security</string>
    <string name="back">Back</string>
</resources>
