<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.captialonecodingchallenge2016.easyread.SummarizedPage">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/article_summary"
        android:id="@+id/articleSummaryTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textColor="@color/red" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/concepts"
        android:id="@+id/concept"
        android:layout_below="@id/articleSummaryTitle"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:textSize="15sp"
        android:text="@string/conceptText"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/summary"
        android:hint="@string/summary_hint"
        android:textAlignment="textStart"
        android:layout_below="@+id/concept"
        android:text="@string/articleText"
        android:layout_alignParentStart="true"
        android:textSize="14sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/Back"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="back"/>

</RelativeLayout>
