<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/white"
    tools:context="com.captialonecodingchallenge2016.easyread.MainScreen">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:textAlignment="center"
        android:singleLine="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:textColor="#fd0000"
        android:textStyle="bold"
        android:typeface="serif"
        android:id="@+id/title" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textBox"
        android:inputType="text"
        android:maxWidth="200dp"
        android:maxLines="1"
        android:hint="@string/textHint"
        android:textSize="25sp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:layout_above="@id/textBox"
        android:layout_below="@id/title"
        android:id="@+id/linearLayout">
    <ImageView
        android:id="@+id/ScreenImage"
        android:layout_width="125sp"
        android:layout_height="125sp"
        android:src="@drawable/newspaper"
        android:contentDescription="@string/pic1"
        android:paddingEnd="15sp"
        android:paddingStart="15sp" />
    <ImageView
        android:id="@+id/Arrow"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:src="@drawable/rightarrow"
        android:contentDescription="@string/pic2"
        android:paddingEnd="15sp"
        android:paddingStart="15sp"/>
    <ImageView
            android:id="@+id/Article"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:src="@drawable/shortarticle"
            android:contentDescription="@string/pic3"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author"
        android:id="@+id/author"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="15sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/button"
        android:layout_below="@+id/textBox"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:onClick="submit"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/aboutApp"
        android:id="@+id/AboutTheApp"
        android:layout_toStartOf="@id/author"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="go_to_AppInfo"
        android:maxLines="1" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/aboutMe"
        android:id="@+id/AboutMe"
        android:layout_alignBottom="@+id/AboutTheApp"
        android:layout_alignEnd="@+id/linearLayout"
        android:onClick="go_to_AboutMe"/>


</RelativeLayout>
