<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/white"
    tools:context="com.captialonecodingchallenge2016.easyread.AppInfo">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutApp"
        android:id="@+id/AppInfo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:textColor="#fd0000"
        android:textStyle="bold"
        android:typeface="serif" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capitalOne"
        android:id="@+id/CapitalOne"
        android:textSize="14sp"
        android:layout_marginBottom="34dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:id="@+id/largeDescription"
        android:textSize="16sp"
        android:layout_below="@+id/AppInfo"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/downarrow"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/largeDescription"
        android:src="@drawable/downarrow"
        android:contentDescription="@string/downwardsarrow" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/smallinfo"
        android:layout_marginBottom="25dp"
        android:id="@+id/smallDescription"
        android:textSize="16sp"
        android:layout_below="@+id/downarrow"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@id/smallDescription"
        android:layout_above="@id/CapitalOne"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginEnd="20dp"
        android:text="@string/home"
        android:id="@+id/homeButton"
        android:layout_gravity="center"
        android:textSize="15sp"
        android:elegantTextHeight="true"
        android:onClick="go_to_Home"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:text="@string/aboutMe"
        android:textAllCaps="false"
        android:id="@+id/aboutMeButton"
        android:layout_gravity="center"
        android:textSize="15sp"
        android:onClick="go_to_AboutMe"/>
    </LinearLayout>
</RelativeLayout>
