<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/white"
    tools:context="com.captialonecodingchallenge2016.easyread.AboutMe">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutMe"
        android:id="@+id/AboutMeTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#fd0000" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/AboutMeTitle"
        android:layout_marginTop="20dp"
        android:id="@+id/mePic"
        android:src="@drawable/mepic"
        android:maxHeight="250dp"
        android:maxWidth="100dp"
        android:contentDescription="@string/me"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meInfo"
        android:textSize="15sp"
        android:id="@+id/meInfoText"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/mePic"
        android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"
            android:text="@string/home"
            android:id="@+id/homeButton"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:layout_below="@id/meInfoText"
            android:elegantTextHeight="true"
            android:onClick="go_to_Home"/>

</RelativeLayout>
